# ai-patent-assist

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  DOCKER_TESTING.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-test.sh  package-lock.json  package.json  playwright.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  opencode.yaml  trae.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql  002_seed_test_data.sql  003_add_ai_model_defaults.sql  004_fix_admin_password.sql
backend/src/: error.rs  lib.rs  main.rs  middleware.rs
backend/src/api/: middleware.rs  routes.rs
backend/src/api/handlers/: ai.rs  api_keys.rs  auth.rs  copyrights.rs  logs.rs  mod.rs  patents.rs  projects.rs  templates.rs  users.rs
backend/src/auth/: mod.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: ai_generator.rs  mod.rs
backend/tests/: integration.rs
deploy/kubernetes/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  namespace.yaml  postgres-service.yaml  postgres-statefulset.yaml  redis-deployment.yaml  redis-service.yaml  secrets.yaml
docs/: API.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: auth.ts  copyright.ts  http.ts  patent.ts  project.ts  template.ts  user.ts
frontend/src/components/: DataTable.vue  FormDialog.vue  index.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/stores/: app.ts  (+1 more)
playwright-report/: index.html
test-results/: .last-run.json
test-results/detail-pages-专利和软著详情页测试-查看软著详情页-retry2/: error-context.md
tests/: detail-pages.spec.ts
(+15 files in other folders)
