[package]
name = "ai-patent-assist-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 配置
config = "0.14"
dotenvy = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 密码哈希
argon2 = "0.5"
