[package]
name = "ai-patent-assist-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_patent_assist_backend"
path = "src/lib.rs"

[[bin]]
name = "ai-patent-assist-backend"
path = "src/main.rs"

[dependencies]
# Web 框架
axum = { version = "0.8.8", features = ["multipart"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 日志0.15.21
tracing = "0.1"
tracing-subscriber = "0.3"

# 配置
config = "0.15.21"
dotenvy = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP 客户端
reqwest = { version = "0.13.2", features = ["json"] }

# 密码哈希
argon2 = "0.5"

# JWT
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

# Error handling
thiserror = "1.0"

# Extra axum utilities
axum-extra = { version = "0.12.5", features = ["typed-header"] }
headers = "0.4"

# 测试
[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
once_cell = "1.19"
